--- a/p100-memoria.html
+++ b/p100-memoria.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <div id="contador"> </div>       
+    <div id="contador"> </div>  
 
     <script>
         var n = 0;
@@ -40,6 +40,9 @@
         document.getElementById('high').addEventListener('click', startCounter);
     </script>
 
+    <div id="numclicks">0</div>  
+
+    
 
     <div id="tauler">
         <div class="carta" id="f1c1">
