--- a/p100-memoria.html
+++ b/p100-memoria.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    
-
 </head>
 
 <body>
@@ -55,7 +53,7 @@
 
     </div>
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+<button  id="exampleModalButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" hidden>
   Launch demo modal
 </button>
 
