--- a/p100-memoria.html
+++ b/p100-memoria.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <div id="contador"> </div>  
+    <div id="contador">Temps: </div>  
 
     <script>
         var n = 0;
