Squashed commit of the following:
commit c7025aacb026bc5a64d18ac613ed247d3e5b261a
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Mon Apr 22 22:11:36 2024 +0200

    Últiim

commit 26d6432629f191dd2e18618626d2261d676dd30a
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Thu Apr 18 22:03:35 2024 +0200

    temps

commit 12cf9b5923ad9ba63712c231f075b7116f4f3326
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Thu Apr 18 22:00:47 2024 +0200

    ss

commit 376edba19319bb79668bc74a6159b55a69036f00
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Thu Apr 18 21:39:42 2024 +0200

    modal-js

commit 701a1a334f999d024d4cb993f13ab600f6cdef6e
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Thu Apr 18 21:13:39 2024 +0200

    Modal

commit 5da5a38632fede1780dc517246226d25572d03fd
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Thu Apr 18 19:32:37 2024 +0200

    merge

commit 23348394d906ec8a2c71f78461f13df02b5284f4
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Thu Apr 18 19:29:01 2024 +0200

    merge

commit 00e15d9ea25a4da5e9cf218ea915ebd4f2fbf259
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Thu Apr 18 18:48:26 2024 +0200

    changes

commit 9af29100f30d174da0c62680f80913460dd3ae61
Merge: 17a228f 9620551
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Thu Apr 18 18:48:14 2024 +0200

    changes

commit 17a228f2c88c359f5c8f51a16415329ca05a9ce2
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Thu Apr 18 18:46:23 2024 +0200

    changes

commit 8ee13eb75a01d66afd85da2fd7f7841c025045f4
Author: JanaBoverSáez <jbovers@edu.tecnocampus.cat>
Date:   Thu Apr 18 18:44:44 2024 +0200

    add controlclicks

commit 96205515ad5dbce9dc12328ca560f6b68027b205
Author: AinaBarnet <147982964+AinaBarnet@users.noreply.github.com>
Date:   Wed Apr 17 13:41:46 2024 +0200

    parelles + capçalera

commit 28b899fcd82a7b1eb1dfd0ec1461e21bb8253b5d
Author: AinaBarnet <147982964+Aina

--- a/p100-memoria.html
+++ b/p100-memoria.html
@@ -1,34 +1,94 @@
 <html lang="cat">
 
 <head>
-    <meta charset="utf-8">
-    <title>Donar la volta a una carta</title>
+    <meta charset="UTF-8">
+    <title>Memory Game</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="./js/jquery-3.7.1.js"></script>
     <script src="./js/p100-memoria.js"></script>
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <header>
-        <h1>Memoria cartes - DEMO</h1>
-    </header>
+    <div id="nivells" class="botonsNivells">
+        <h1>MEMORY GAME</h1>
+        <h3>Escull el nivell per començar a jugar</h3>
+        <div id="level-selection">
+            <button id="low" class="button">LOW</button>
+            <button id="medium" class="button">MEDIUM</button>
+            <button id="high" class="button">HIGH</button>
+        </div>
+    </div>
+
+    <div id="contador"> </div>  
+
+    <script>
+        var n = 0;
+        function setCounter() {
+            var l = document.getElementById("contador");
+            l.innerHTML = n;
+            n++;
+        }
+
+        function startCounter() {
+            setCounter();
+            setInterval(setCounter, 1000);
+        }
+
+        document.getElementById('low').addEventListener('click', startCounter);
+        document.getElementById('medium').addEventListener('click', startCounter);
+        document.getElementById('high').addEventListener('click', startCounter);
+    </script>
+
+    <div id="numclicks">0</div>  
+
+    
 
     <div id="tauler">
         <div class="carta" id="f1c1">
-
             <div class="cara davant"></div>
         </div>
 
-
     </div>
+<!-- Button trigger modal -->
+<button  id="exampleModalButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" hidden>
+  Launch demo modal
+</button>
 
-    <footer>
-        <p>Fes clic en una carta per donar-li la volta</p>
-    </footer>
+<!-- Modal -->
 
+<div class="modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+         <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="false">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
+    <script>
+        function mostrarTaulell() {
+            document.getElementById("nivells").style.display = 'none';
+            document.getElementById("tauler").style.display = 'block';
+        }
 
+        document.getElementById('low').addEventListener('click', mostrarTaulell);
+        document.getElementById('medium').addEventListener('click', mostrarTaulell);
+        document.getElementById('high').addEventListener('click', mostrarTaulell);
+    </script>
 </body>
-
 </html>
+
