--- a/p100-memoria.html
+++ b/p100-memoria.html
@@ -23,7 +23,7 @@
     </div>
 
     <div id="contador"> </div>  
-
+    
     <script>
         var n = 0;
         function setCounter() {
@@ -44,7 +44,7 @@
 
     <div id="numclicks">0</div>  
 
-    
+    <div id="parelles"> </div>  
 
     <div id="tauler">
         <div class="carta" id="f1c1">
